replace SIMD library